# dsba-itop2022-hw

./: BigHW.rar  CMakeLists.txt  Train.csv  about.cpp  about.h  about.ui  analyticswindow.cpp  analyticswindow.h  analyticswindow.ui  logo.cpp  logo.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme  storage.cpp  storage.h
